[package]
name = "btlv"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to encode/decode Lightning Network, BOLT specified TLV messages"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
license = "MIT"

[[bin]]
name = "btlv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
serde_json = "1"
