[package]
name = "btlv"
version = "0.2.0"
edition = "2021"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]
license = "MIT"
description = "Lightning Network BOLT TLV encoding, decoding, and struct mapping"
documentation = "https://github.com/nepet/btlv"
homepage = "https://github.com/nepet/btlv"
repository = "https://github.com/nepet/btlv"
readme = "README.md"
keywords = ["lightning", "tlv", "bolt", "bitcoin", "encoding"]
categories = ["encoding", "cryptography::cryptocurrencies"]
exclude = [
    "tests/",
    ".github/",
    "*.log",
    "tmp/",
]

[dependencies]
thiserror = "2"
hex = "0.4"
serde = { version = "1", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
